refactor application layer for slim code
