# .docs/api/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  data.LoginResult:
+    properties:
+      token:
+        type: string
+      username:
+        type: string
+    type: object
   data.LoginUserAccountParam:
     properties:
       password:
@@ -8,13 +15,6 @@ definitions:
     required:
     - password
     - username_or_email
-    type: object
-  data.LoginUserAccountResult:
-    properties:
-      token:
-        type: string
-      username:
-        type: string
     type: object
   data.RegisterUserAccountParam:
     properties:
@@ -30,19 +30,15 @@ definitions:
         type: string
       username:
         type: string
+    required:
+    - email
+    - family_name
+    - given_name
+    - password
+    - password_confirmation
+    - username
     type: object
-  data.RegisterUserAccountResult:
-    properties:
-      email:
-        type: string
-      family_name:
-        type: string
-      given_name:
-        type: string
-      username:
-        type: string
-    type: object
-  data.ShowUserAccountResult:
+  data.UserAccountResult:
     properties:
       email:
         type: string
@@ -70,7 +66,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.ShowUserAccountResult'
+            $ref: '#/definitions/data.UserAccountResult'
         "401":
           description: ""
       summary: Show a logged in user
@@ -91,7 +87,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.RegisterUserAccountResult'
+            $ref: '#/definitions/data.UserAccountResult'
         "400":
           description: ""
       summary: Register a user
@@ -113,7 +109,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.LoginUserAccountResult'
+            $ref: '#/definitions/data.LoginResult'
         "400":
           description: ""
         "401":
